[tool.poetry]
name = "jira"
version = "2.1.0-svkj"
description = ""
authors = ["Steve Vermeulen <sfvermeulen@gmail.com>"]

[build-system]
requires = [
  "setuptools >= 41.0.0",
  "setuptools_scm >= 1.15.0",
  "setuptools_scm_git_archive >= 1.0",
  "wheel",
]
requires-python = ">=3.5"
build-backend = "setuptools.build_meta"
